# OmaeWoMiteiru

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.yml  tts-sample.json
i18n/: OmaeWoMiteiru.pot  README.md
i18n/ja/LC_MESSAGES/: OmaeWoMiteiru.mo  OmaeWoMiteiru.po
src/: main.rs
src/i18n/: mod.rs
