[package]
name = "OmaeWoMiteiru"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.129"
serde_json = "1.0"
xshell = "0.1.14"
base64 = "0.13.0"

[dependencies.songbird]
version = "0.2.0"

[dependencies.serenity]
version = "0.10.9"
default-features = false
features = ["client", "gateway", "standard_framework", "model", "cache", "voice", "rustls_backend"]

[dependencies.tokio]
version = "1"
features = ["full"]

[dependencies.reqwest]
version = "0.11"
features = ["json"]

[dependencies.gettext-rs]
version = "0.7.0"
features = ["gettext-system"]
